--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
     - toc.follow
     - search.suggest
     - search.highlight
-    - toc.integrate
+    # - toc.integrate
     - content.code.copy
   palette:
     - scheme: default
